req/max note params and function refactoring
